test/types/records/split-init/error-never-initialized-values-mentioned2.good
error-never-initialized-values-mentioned2.chpl:3: In function 'error':
error-never-initialized-values-mentioned2.chpl:5: error: cannot default-initialize b2: borrowed C
error-never-initialized-values-mentioned2.chpl:7: error: use here prevents split-init
note: non-nilable class type 'borrowed C' does not support default initialization
note: Consider using the type borrowed C? instead
