test/types/records/split-init/error-never-initialized-values-mentioned2.chpl
class C { }

proc error() {
  // These have invalid split inits
  var b2: borrowed C;

  writeln(b2);

  b2 = (new owned C()).borrow();
}
error();
